--- a/src/app/animal/animal-detail/animal-detail.component.html
+++ b/src/app/animal/animal-detail/animal-detail.component.html
@@ -1,7 +1,9 @@
-<h2>Animal-Detail:</h2>
-<p>
-    <label><span class="title">name:</span> {{animal.name}}</label>
-    <label><span class="title">species:</span> {{animal.species}}</label>
-    <label><span class="title">veterinarian:</span> {{animal.veterinarian}}</label>
-    <label><span class="title">comment:</span> {{animal.comment}}</label>
-</p>
+<h2>Animals list:</h2>
+<div *ngFor="let animal of animals;">
+    <p>
+        <label><span class="title">name:</span><span class="value">{{animal.name}}</span></label>
+        <label><span class="title">species:</span><span class="value">{{animal.species}}</span></label>
+        <label><span class="title">veterinarian:</span><span class="value">{{animal.veterinarian}}</span></label>
+        <label><span class="title">comment:</span><span class="value">{{animal.comment}}</span></label>
+    </p>
+</div>
