Add truncate pipe.

--- a/src/app/animal/animal-detail/animal-detail.component.html
+++ b/src/app/animal/animal-detail/animal-detail.component.html
@@ -4,6 +4,6 @@
         <label><span class="title">name:</span><span class="value" appHighlight>{{animal.name}}</span></label>
         <label><span class="title">species:</span><span class="value">{{animal.species}}</span></label>
         <label><span class="title">veterinarian:</span><span class="value">{{animal.veterinarian}}</span></label>
-        <label><span class="title">comment:</span><span class="value">{{animal.comment}}</span></label>
+        <label><span class="title">comment:</span><span class="value">{{animal.comment | truncate:15}}</span></label>
     </p>
 </div>
