--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{ title }} app is running!</h1>
 
-<app-animal-detail></app-animal-detail>
+<app-animal-list></app-animal-list>
 
 <router-outlet></router-outlet>
