--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>{{ title }} app is running!</h1>
 
-<app-animal-list></app-animal-list>
-
-<router-outlet></router-outlet>
+<p>
+    <a routerLink="/">Return Home</a>
+</p>
+<p>
+    <router-outlet></router-outlet>
+</p>
