Add subrooring and null safe.

--- a/src/app/animal/animal-detail/animal-detail.component.html
+++ b/src/app/animal/animal-detail/animal-detail.component.html
@@ -1,21 +1,19 @@
-<p>
-    <label>Fiche de détail:</label>
-</p>
-<p>
+<h2>Fiche de détail:</h2>
+<p *ngIf="animal">
     <label>
         <span class="title">name:</span>
-        <span class="value" appHighlight>{{animal?.name}}</span>
+        <span class="value" appHighlight>{{animal.name}}</span>
     </label>
     <label>
         <span class="title">species:</span>
-        <span class="value">{{animal?.species}}</span>
+        <span class="value">{{animal.species}}</span>
     </label>
     <label>
         <span class="title">veterinarian:</span>
-        <span class="value">{{animal?.veterinarian}}</span>
+        <span class="value">{{animal.veterinarian}}</span>
     </label>
     <label>
         <span class="title">comment:</span>
-        <span class="value">{{animal?.comment | truncate:180}}</span>
+        <span class="value">{{animal.comment | truncate:180}}</span>
     </label>
 </p>
