--- a/src/app/animal/animal-item/animal-item.component.html
+++ b/src/app/animal/animal-item/animal-item.component.html
@@ -1,5 +1,5 @@
 <p>
-    <a [routerLink]="['animal',animal.id]">
+    <a [routerLink]="['/animals',animal.id]">
         <span class="title">name:</span>
         <span class="value">{{animal.name}}</span>
     </a>
