Add Veterinarian lazy loaded module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<h1>{{ title }} app is running!</h1>
+<h1>{{ title }}App</h1>
 
 <p>
-    <a routerLink="/">Return Home</a>
+    <a routerLink="/">Animals</a>
+    <a routerLink="/veterinarians">Veterinarians</a>
 </p>
 <p>
     <router-outlet></router-outlet>
