--- a/src/app/animal/animal-list/animal-list.component.html
+++ b/src/app/animal/animal-list/animal-list.component.html
@@ -4,4 +4,4 @@
     [animal]="animal"
     (delete)="onDelete($event)"
 ></app-animal-item>
-<button routerLink="/animals/form">Ajouter une fiche.</button>
+<button routerLink="/animals/new">Ajouter une fiche.</button>
