--- a/src/app/veterinarian/veterinarian-list/veterinarian-list.component.html
+++ b/src/app/veterinarian/veterinarian-list/veterinarian-list.component.html
@@ -3,3 +3,4 @@
     *ngFor="let veterinarian of veterinarians;"
     [veterinarian]="veterinarian"
 ></app-veterinarian-item>
+<button routerLink="new">Add Veterinarian</button>
