--- a/src/app/animal/animal-item/animal-item.component.html
+++ b/src/app/animal/animal-item/animal-item.component.html
@@ -1,12 +1,23 @@
-<p>
-    <a [routerLink]="['/animals',animal.id]">
-        <span class="title">name:</span>
-        <span class="value">{{animal.name}}</span>
-    </a>
-    <label>
-        <span class="title">species:</span>
-        <span class="value">{{animal.species}}</span>
-    </label>
-    <button class="action" (click)="onDeleteClick()">delete</button>
-    <button class="action" [routerLink]="['/animals/edit',animal.id]">edit</button>
-</p>
+<mat-card>
+    <mat-card-header>
+        <mat-icon mat-card-avatar>
+            <i class="material-icons md-48">pets</i>
+        </mat-icon>
+        <mat-card-title>
+            {{animal.name}}
+        </mat-card-title>
+        <mat-card-subtitle>
+            {{ animal.species }}
+        </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p>
+            {{ animal.comment | truncate:180 }}
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button [routerLink]="['/animals',animal.id]">detail</button>
+        <button mat-button [routerLink]="['/animals/edit',animal.id]">edit</button>
+        <button mat-button (click)="onDeleteClick()">delete</button>
+    </mat-card-actions>
+</mat-card>
