--- a/src/app/animal/animal-item/animal-item.component.html
+++ b/src/app/animal/animal-item/animal-item.component.html
@@ -7,7 +7,7 @@
             {{animal.name}}
         </mat-card-title>
         <mat-card-subtitle>
-            {{ animal.species }}
+            {{ 'animal.item.species.' + animal.species | translate }}
         </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
@@ -16,8 +16,14 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button [routerLink]="['/animals',animal.id]">detail</button>
-        <button mat-button [routerLink]="['/animals/edit',animal.id]">edit</button>
-        <button mat-button (click)="onDeleteClick()">delete</button>
+        <button mat-button [routerLink]="['/animals',animal.id]">
+            {{ 'animal.item.action.detail' | translate | uppercase }}
+        </button>
+        <button mat-button [routerLink]="['/animals/edit',animal.id]">
+            {{ 'animal.item.action.edit' | translate | uppercase }}
+        </button>
+        <button mat-button (click)="onDeleteClick()">
+            {{ 'animal.item.action.delete' | translate | uppercase }}
+        </button>
     </mat-card-actions>
 </mat-card>
